tests/baselines/reference/moduleCrashBug1.errors.txt
moduleCrashBug1.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
moduleCrashBug1.ts(13,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
moduleCrashBug1.ts(18,9): error TS2709: Cannot use namespace '_modes' as a type.


==== moduleCrashBug1.ts (3 errors) ====
    module _modes {
           ~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
     export interface IMode {
      
     }
     
     class Mode {
      
     }
    }
    
    //_modes. // produces an internal error - please implement in derived class
    
    module editor {
           ~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
     import modes = _modes;
    
    }
    
    var m : _modes;
            ~~~~~~
!!! error TS2709: Cannot use namespace '_modes' as a type.
    
    
    